# Dodo

./: .env.example  AI_USAGE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  openapi.yaml
assets/: swagger-ui.html
migrations/: 001_initial.sql  002_one_processing_per_invoice.sql  003_business_id_default_uuid.sql
src/: config.rs  lib.rs  logging.rs  main.rs
src/api/: docs.rs  error.rs  extractors.rs  mod.rs  routes.rs  service_error.rs
src/domain/: customer_name.rs  email.rs  invoice_state.rs  mod.rs  money.rs
src/mock_psp/: mod.rs
src/repository/: api_key.rs  customer.rs  idempotency.rs  invoice.rs  mod.rs  payment.rs  webhook.rs
src/services/: customer.rs  invoice.rs  mod.rs  payment.rs  psp_client.rs  webhook_endpoint.rs
src/worker/: mod.rs  webhook_sign.rs
tests/: domain_email.rs  integration_tests.rs
